src/objects/TCodeManagement__c.object
<CustomObject>
    <description>This details the t-code, description, price, if the t-code is still valid and incentive related to the t-code</description>
    <fields>
        <fullName>Allow13Week__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if one-off payment is allowed for 13 week subscription.</description>
        <inlineHelpText>Defines if one-off payment is allowed for 13 week subscription.</inlineHelpText>
        <label>Allow One Off 13 Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow26Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines if one-off payment is allowed for 26 week subscription.</description>
        <inlineHelpText>Defines if one-off payment is allowed for 26 week subscription.</inlineHelpText>
        <label>Allow One Off  26 Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow52Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines if one-off payment is allowed for 52 week subscription.</description>
        <inlineHelpText>Defines if one-off payment is allowed for 52 week subscription.</inlineHelpText>
        <label>Allow One Off 52 Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowCCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowCCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowContinuous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowContinuous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowDD__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AllowDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_13_Week_CCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Credit Card Authority payment type is allowed for 13 week subscription.</description>
        <inlineHelpText>Defines if Credit Card Authority payment type is allowed for 13 week subscription.</inlineHelpText>
        <label>Allow 13 Week CCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_13_Week_DD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Direct Debit payment type is allowed for 13 week subscription.</description>
        <inlineHelpText>Defines if Direct Debit payment type is allowed for 13 week subscription.</inlineHelpText>
        <label>Allow 13 Week DD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_26_Week_CCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Credit Card Authority payment type is allowed for 26 week subscription.</description>
        <inlineHelpText>Defines if Credit Card Authority payment type is allowed for 26 week subscription.</inlineHelpText>
        <label>Allow 26 Week CCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_26_Week_DD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Direct Debit payment type is allowed for 26 week subscription.</description>
        <inlineHelpText>Defines if Direct Debit payment type is allowed for 26 week subscription.</inlineHelpText>
        <label>Allow 26 Week DD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_52_Week_CCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Credit Card Authority payment type is allowed for 52 week subscription.</description>
        <inlineHelpText>Defines if Credit Card Authority payment type is allowed for 52 week subscription.</inlineHelpText>
        <label>Allow 52 Week CCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_52_Week_DD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Direct Debit payment type is allowed for 52 week subscription.</description>
        <inlineHelpText>Defines if Direct Debit payment type is allowed for 52 week subscription.</inlineHelpText>
        <label>Allow 52 Week DD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Monthly_Price__c</fullName>
        <label>Digital Monthly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Yearly_Price__c</fullName>
        <label>Digital Yearly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Expiry_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Expiry Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Digital_Type_For_Flow__c</fullName>
        <label>Exclude Digital Type For Flow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Monthly</fullName>
                </value>
                <value>
                <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gp_Stage_One_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gp Stage One Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gp_Stage_Two_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gp Stage Two Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incentive</label>
        <referenceTo>Incentive__c</referenceTo>
        <relationshipLabel>TCodesManagement</relationshipLabel>
        <relationshipName>TCodesManagement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_13_Continuous__c</fullName>
        <description>If one of the continuous payment flags is ticked for 13 weeks, then 13 week can be sold as continuous.</description>
        <formula>OR(INCLUDES(Payment_Type__c , &apos;Allow 13 Week DD&apos;),INCLUDES(Payment_Type__c , &apos;Allow 13 Week CCA&apos;))</formula>
        <inlineHelpText>If one of the continuous payment flags is ticked for 13 weeks, then 13 week can be sold as continuous.</inlineHelpText>
        <label>Is 13 Continuous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_26_Continuous__c</fullName>
        <description>If one of the continuous payment flags is ticked for 26 weeks, then 26 week can be sold as continuous.</description>
        <formula>OR(INCLUDES(Payment_Type__c , &apos;Allow 26 Week DD&apos;),INCLUDES(Payment_Type__c , &apos;Allow 26 Week CCA&apos;))</formula>
        <inlineHelpText>If one of the continuous payment flags is ticked for 26 weeks, then 26 week can be sold as continuous.</inlineHelpText>
        <label>Is 26 Continuous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_52_Continuous__c</fullName>
        <description>If one of the continuous payment flags is ticked for 52 weeks, then 52 week can be sold as continuous.</description>
        <formula>OR(INCLUDES(Payment_Type__c , &apos;Allow 52 Week DD&apos;),INCLUDES(Payment_Type__c , &apos;Allow 52 Week CCA&apos;))</formula>
        <inlineHelpText>If one of the continuous payment flags is ticked for 52 weeks, then 52 week can be sold as continuous.</inlineHelpText>
        <label>Is 52 Continuous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_Start_Period__c</fullName>
        <description>Number of weeks for which low start price is applicable.</description>
        <inlineHelpText>Number of weeks for which low start price is applicable.</inlineHelpText>
        <label>Low Start Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>13</fullName>
                </value>
                <value>
                <fullName>26</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Low_Start_Weekly_Price__c</fullName>
        <description>Low start price defines the price for the initial period of subscription related to this TCode. Second subscription for low start uses Premium Weekly Price.</description>
        <inlineHelpText>Low start price defines the price for the initial period of subscription related to this TCode. Second subscription for low start uses Premium Weekly Price.</inlineHelpText>
        <label>Low Start Weekly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OptionalIncentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order for Campaigns</description>
        <label>Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Center_Email__c</fullName>
        <label>Partner Contact Center  Email</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Center_Tel__c</fullName>
        <label>Partner Contact Center Tel</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Allow One Off 13 Week</fullName>
                </value>
                <value>
                <fullName>Allow One Off 26 Week</fullName>
                </value>
                <value>
                <fullName>Allow One Off 52 Week</fullName>
                </value>
                <value>
                <fullName>Allow 13 Week DD</fullName>
                </value>
                <value>
                <fullName>Allow 13 Week CCA</fullName>
                </value>
                <value>
                <fullName>Allow 26 Week DD</fullName>
                </value>
                <value>
                <fullName>Allow 26 Week CCA</fullName>
                </value>
                <value>
                <fullName>Allow 52 Week DD</fullName>
                </value>
                <value>
                <fullName>Allow 52 Week CCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Premium Weekly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Type__c</fullName>
        <label>Reporting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>DM</fullName>
                </value>
                <value>
                <fullName>EM</fullName>
                </value>
                <value>
                <fullName>Lapsed DM</fullName>
                </value>
                <value>
                <fullName>Lapsed OBTM</fullName>
                </value>
                <value>
                <fullName>Loyalty</fullName>
                </value>
                <value>
                <fullName>Low Start</fullName>
                </value>
                <value>
                <fullName>MIS</fullName>
                </value>
                <value>
                <fullName>OBTM</fullName>
                </value>
                <value>
                <fullName>Open Offer</fullName>
                </value>
                <value>
                <fullName>Other</fullName>
                </value>
                <value>
                <fullName>Renewal</fullName>
                </value>
                <value>
                <fullName>RI</fullName>
                </value>
                <value>
                <fullName>SELF</fullName>
                </value>
                <value>
                <fullName>UKN</fullName>
                </value>
                <value>
                <fullName>Digital Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Cancel_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Cancel Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Data_Text__c</fullName>
        <label>Special Data Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turn on or off the MGM prompt</description>
        <label>Special Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TCode__c</fullName>
        <label>TCode</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tablet_International_Annual_Offer_Code__c</fullName>
        <label>Tablet International Annual Offer Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tablet_International_Annual_Offer_Label__c</fullName>
        <label>Tablet International Annual Offer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tablet_International_Monthly_Offer_Code__c</fullName>
        <label>Tablet International Monthly Offer Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tablet_International_Monthly_Offer_Label__c</fullName>
        <label>Tablet International Monthly Offer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tablet_UK_Annual_Offer_Code__c</fullName>
        <label>Tablet UK Annual Offer Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tablet_UK_Annual_Offer_Label__c</fullName>
        <label>Tablet UK Annual Offer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tablet_UK_Monthly_Offer_Code__c</fullName>
        <label>Tablet UK Monthly Offer Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tablet_UK_Monthly_Offer_Label__c</fullName>
        <label>Tablet UK Monthly Offer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Campaign</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Low Start</fullName>
                </value>
                <value>
                <fullName>Open Offer</fullName>
                </value>
                <value>
                <fullName>Registered Interest</fullName>
                </value>
                <value>
                <fullName>POC</fullName>
                </value>
                <value>
                <fullName>MGM</fullName>
                </value>
                <value>
                <fullName>Staff Offer</fullName>
                </value>
                <value>
                <fullName>Renewal</fullName>
                </value>
                <value>
                <fullName>MIS</fullName>
                </value>
                <value>
                <fullName>Other</fullName>
                </value>
                <value>
                <fullName>POC-DM</fullName>
                </value>
                <value>
                <fullName>POC-EM</fullName>
                </value>
                <value>
                <fullName>POC-OBTM</fullName>
                </value>
                <value>
                <fullName>Promotional</fullName>
                </value>
                <value>
                <fullName>SELF</fullName>
                </value>
                <value>
                <fullName>UKN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked then the t-code is available for selection</description>
        <inlineHelpText>If checked then the t-code is available for selection</inlineHelpText>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Pack_Monthly_Price__c</fullName>
        <label>Web Pack Monthly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Pack_Yearly_Price__c</fullName>
        <label>Web Pack Yearly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Website_Int_Monthly_Offer_Label__c</fullName>
        <label>Website Int. Monthly Offer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_International_Annual_Offer_Code__c</fullName>
        <label>Website International Annual Offer Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_International_Annual_Offer_Label__c</fullName>
        <label>Website International Annual Offer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_International_Monthly_Offer_Code__c</fullName>
        <label>Website International Monthly Offer Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_UK_Annual_Offer_Code__c</fullName>
        <label>Website UK Annual Offer Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_UK_Annual_Offer_Label__c</fullName>
        <label>Website UK Annual Offer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_UK_Monthly_Offer_Code__c</fullName>
        <label>Website UK Monthly Offer Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_UK_Monthly_Offer_Label__c</fullName>
        <label>Website UK Monthly Offer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X13_week_price__c</fullName>
        <inlineHelpText>Defaults to £30 if left blank</inlineHelpText>
        <label>13 Week price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>imageURL__c</fullName>
        <label>imageURL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tandcURL__c</fullName>
        <label>tandcURL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>TCodeManagement</label>
    <nameField>
        <label>TCode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TCodesManagement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Low_Start_Can_Only_Be_Continuous</fullName>
        <active>true</active>
        <description>Currently only continuous subscription is supported as Low Start offer.</description>
        <errorConditionFormula>AND(OR(INCLUDES(Payment_Type__c , &apos;Allow One Off 13 Week&apos;), INCLUDES(Payment_Type__c , &apos;Allow One Off 26 Week&apos;), INCLUDES(Payment_Type__c , &apos;Allow One Off 52 Week&apos;)), ISPICKVAL(Type__c, &apos;Low Start&apos;))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You cannot sell Low Start subscription with one off payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Low_Start_Period_Minimum_Check</fullName>
        <active>true</active>
        <description>Low Start Period cannot be greater or equal to the minimum subscription length.</description>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &apos;Low Start&apos;), OR(AND(ISPICKVAL(Low_Start_Period__c, &apos;26&apos;), Is_26_Continuous__c), AND(ISPICKVAL(Low_Start_Period__c, &apos;13&apos;), Is_13_Continuous__c)))</errorConditionFormula>
        <errorDisplayField>Low_Start_Period__c</errorDisplayField>
        <errorMessage>Low Start Period cannot be greater or equal to the minimum subscription length.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Low_Start_Period_Required</fullName>
        <active>true</active>
        <description>Low Start Period is required for low start TCode.</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(Low_Start_Period__c)), ISPICKVAL(Type__c, &apos;Low Start&apos;))</errorConditionFormula>
        <errorDisplayField>Low_Start_Period__c</errorDisplayField>
        <errorMessage>Low Start Period is required for low start TCode.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Low_Start_Price_For_Low_Start_TCode</fullName>
        <active>false</active>
        <description>Low Start Price has to be specified for a Low Start TCode.</description>
        <errorConditionFormula>AND(OR(ISBLANK(Low_Start_Weekly_Price__c), Low_Start_Weekly_Price__c &lt; 0), ISPICKVAL(Type__c,&apos;Low Start&apos;))</errorConditionFormula>
        <errorDisplayField>Low_Start_Weekly_Price__c</errorDisplayField>
        <errorMessage>You have to specify a valid Low Start Weekly Price for Low Start TCode type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Low_Start_at_Least_26_Weeks</fullName>
        <active>true</active>
        <description>Low start subscription has to be at least 26 weeks long.</description>
        <errorConditionFormula>AND(Is_13_Continuous__c, ISPICKVAL(Type__c, &apos;Low Start&apos;))</errorConditionFormula>
        <errorMessage>Low start subscription has to be at least 26 weeks long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Off_13_Week_Price_Required</fullName>
        <active>false</active>
        <description>One off 13 week option requires 13 week price field to be populated.</description>
        <errorConditionFormula>AND(Allow13Week__c, ISBLANK(X13_week_price__c))</errorConditionFormula>
        <errorDisplayField>X13_week_price__c</errorDisplayField>
        <errorMessage>13 Week price has to be populated when Allow One Off 13 Week is ticked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Premium_Price_For_Low_Start_TCode</fullName>
        <active>false</active>
        <description>Premium Weekly Price has to be specified for a Low Start TCode.</description>
        <errorConditionFormula>AND(OR(ISBLANK(Price__c), Price__c &lt; 0), ISPICKVAL(Type__c,&apos;Low Start&apos;))</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>You have to specify a valid Premium Weekly Price for Low Start TCode type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TCode_Length_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     OR( LEN( Name ) &lt;= 0, LEN( Name ) &gt; 4)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>TCode must be 4 characters long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>X13weeksGT1</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISNULL(X13_week_price__c)),X13_week_price__c &lt; 1,false)</errorConditionFormula>
        <errorDisplayField>X13_week_price__c</errorDisplayField>
        <errorMessage>The value must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>